--- a/porfolio.html
+++ b/porfolio.html
@@ -156,7 +156,7 @@
             <div class="work__container bg-grid">
                 <div>
                     <div class="work__img">
-                        <img src="assets/img/Agency.png" alt="">
+                        <img src="assets/img/Agency.PNG" alt="">
                     </div>
                     <div>
                         <h3><a href="https://agency-real-estate.herokuapp.com/">Real estate agency</a></h3>
@@ -166,7 +166,7 @@
                 </div>
                 <div>
                     <div class="work__img">
-                        <img src="assets/img/Gevents.png" alt="">
+                        <img src="assets/img/Gevents.PNG" alt="">
                     </div>
                     <div>
                         <div>
