Valid img : png to  PNG

--- a/porfolio.html
+++ b/porfolio.html
@@ -145,7 +145,7 @@
 
                 </div>
                 <div>
-                    <img src="assets/img/Agency.png" alt="" class="skills__img">
+                    <img src="assets/img/Agency.PNG" alt="" class="skills__img">
                 </div>
             </div>
         </section>
