--- a/porfolio.html
+++ b/porfolio.html
@@ -37,12 +37,12 @@
         <section class="home bg-grid" id="home">
             <div class="home__data">
                 <h1 class="home__title">Hi, <br> I'am <span class="home__title-color">Moufid</span><br>Web Developer.</h1>
-                <a href="#" class="button">Contact</a>
+                <a href="mailto:moufid.mtr@gmail.com?subject=Propose an opportunity" class="button">Contact</a>
             </div>
             <div class="home__social">
-                <a href="#" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-                <a href="#" class="home__social-icon"><i class='bx bxl-linkedin-square' ></i></a>
-                <a href="#" class="home__social-icon"><i class='bx bx-mail-send' ></i></a>
+                <a href="https://github.com/Moufid17" target="_blank" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                <a href="www.linkedin.com/in/moufid-mtr" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="" class="home__social-icon"><i class='bx bx-mail-send' ></i></a>
             </div>
             <div class="home__img">
                 <img src="assets/img/font.png" alt="">
