--- a/porfolio.html
+++ b/porfolio.html
@@ -41,7 +41,7 @@
             </div>
             <div class="home__social">
                 <a href="https://github.com/Moufid17" target="_blank" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-                <a href="www.linkedin.com/in/moufid-mtr" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="https://www.linkedin.com/in/moufid-mtr" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin-square' ></i></a>
                 <a href="" class="home__social-icon"><i class='bx bx-mail-send' ></i></a>
             </div>
             <div class="home__img">
