Add snake img for work section

--- a/porfolio.html
+++ b/porfolio.html
@@ -182,7 +182,7 @@
                     </div>
                     <div>
                         <div>
-                            <h3><a href="#">Snake</a></h3>
+                            <h3><a href="https://snake-game-online1.herokuapp.com/">Snake</a></h3>
                             <p>Snake Game - Play Online.</p>
                             <p>JAVASCRIPT</p>
                         </div>
