Add snake img for work section

--- a/porfolio.html
+++ b/porfolio.html
@@ -178,7 +178,7 @@
                 </div>
                 <div>
                     <div class="work__img">
-                        <img src="assets/img/work.jpg" alt="">
+                        <img src="assets/img/snake.PNG" alt="">
                     </div>
                     <div>
                         <div>
