Remove Pro skills text(lorem ...)

--- a/porfolio.html
+++ b/porfolio.html
@@ -70,7 +70,7 @@
             <div class="skills_container bg-grid">
                 <div>
                     <h2 class="skills__subtitle">Professional skills</h2>
-                    <p class="skills__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad tempore excepturi nulla asperiores quo in illo, deleniti quod error, ea porro sunt rerum minus iste molestias. Deleniti earum doloremque sint!</p>
+                    <p class="skills__text"></p>
                     <div class="skills__data">
                         <div class="skills__names">
                             <i class='bx bxl-html5 skills__icon'></i>
