--- a/porfolio.html
+++ b/porfolio.html
@@ -68,7 +68,7 @@
         <section class="skills section" id="skills">
             <h2 class="section-title">Skills</h2>
             <div class="skills_container bg-grid">
-                <div>
+                <div class="skills_data_parent">
                     <h2 class="skills__subtitle">Professional skills</h2>
                     <p class="skills__text"></p>
                     <div class="skills__data">
