update (add eblog and cuisne-connect). Next : contact mailing

--- a/porfolio.html
+++ b/porfolio.html
@@ -37,7 +37,7 @@
         <section class="home bg-grid" id="home">
             <div class="home__data">
                 <h1 class="home__title">Hi, <br> I'am <span class="home__title-color">Moufid</span><br>Web Developer.</h1>
-                <a href="mailto:moufid.mtr@gmail.com?subject=Propose an opportunity" class="button">Contact</a>
+                <a href="mailto:moufid.moutarou.pro@gmail.com?subject=Propose an opportunity" class="button">Contact</a>
             </div>
             <div class="home__social">
                 <a href="https://github.com/Moufid17" target="_blank" class="home__social-icon"><i class='bx bxl-github' ></i></a>
@@ -145,7 +145,14 @@
 
                 </div>
                 <div>
-                    <img src="assets/img/Agency.PNG" alt="" class="skills__img">
+                    <div>
+                        <img src="assets/img/e-blog_home.png" alt="" class="skills__img">
+                    </div>
+                    <div class="skills_img_title">
+                        <h3><a href="#skills">E-Blog</a></h3>
+                        <p>Blog to create, update your article</p>
+                        <p>NextJs - Prisma/Postgres - NextAuth - OpenIA.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -156,24 +163,34 @@
             <div class="work__container bg-grid">
                 <div>
                     <div class="work__img">
-                        <img src="assets/img/Agency.PNG" alt="">
+                        <img src="assets/img/e-blog_post.png" alt="">
                     </div>
                     <div>
-                        <h3><a href="https://agency-real-estate.herokuapp.com/">Real estate agency</a></h3>
-                        <p>Provides all informations about estate in all France city with a lot details.</p>
-                        <p>TWIG - BOOTSTRAP4 - PHP7/SYMFONY5 - MYSQL.</p>
+                        <h3><a href="#work">E-Blog</a></h3>
+                        <p>Thanks to your article title, IA suggest you a description whitch you can custom, then post it.</p>
                     </div>
                 </div>
                 <div>
                     <div class="work__img">
-                        <img src="assets/img/Gevents.PNG" alt="">
+                        <img src="assets/img/cuisine-connect.png" alt="">
                     </div>
                     <div>
                         <div>
-                            <h3><a href="#">College Event Manager</a></h3>
-                            <p>Plan, set up, check participation's system. Private or pubic event.</p>
-                            <p>HTML5 - CSS3 - BOOTSTRAP3 - PHP7 - MYSQL.</p>
+                            <h3><a href="#work">Cuisine-connect</a></h3>
+                            <p>Recherche grâce à l'IA de recette dans ma base de données · Chaque recette propose une description, des ingrédients, de recette similaire ou pas et des accompagnements (générer directement par l'IA)
+                                · Un chatbot qui ne répond qu'à des question sur des recettes · Un utilisateur connecté pourra ajouter ses allergies et noté</p>
+                            <p>NextJs  - Prisma/Postgres - Zod - Zustand - OpenIA.</p>
                         </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="work__img">
+                        <img src="assets/img/Agency.PNG" alt="">
+                    </div>
+                    <div>
+                        <h3><a href="#work">Real estate agency</a></h3>
+                        <p>Provides all informations about estate in all France city with a lot details.</p>
+                        <p>TWIG - BOOTSTRAP4 - PHP7/SYMFONY5 - MYSQL.</p>
                     </div>
                 </div>
                 <div>
@@ -182,7 +199,7 @@
                     </div>
                     <div>
                         <div>
-                            <h3><a href="https://snake-game-online1.herokuapp.com/">Snake</a></h3>
+                            <h3><a href="#work">Snake</a></h3>
                             <p>Snake Game - Play Online.</p>
                             <p>JAVASCRIPT</p>
                         </div>
