Update project url

--- a/porfolio.html
+++ b/porfolio.html
@@ -58,8 +58,8 @@
                 </div>
                 <div class="about__subtitle">
                     <p class="about__text">
-                        Young student in computer science, passionate about web development but also by artificial intelligence.
-                        Mostly self-taught, I have some concrete projects to my credit made with Bootstrap, Twig, Php, Symfony and MySQL.
+                        Young Web developer, passionate about the creation of the webb app and also by artificial intelligence.
+                        Mostly self-taught, I have some concrete projects to my credit made with React/NextJs, Java/Spring Boot, Php/Symfony and Python.
                         I like books related to personal development, have a good sense of relationship and also very curious, honest but especially rigorous about work.😉
                     </p>
                 </div>
@@ -167,7 +167,7 @@
                         <img src="assets/img/e-blog_post.png" alt="">
                     </div>
                     <div>
-                        <h3><a href="#work">E-Blog</a></h3>
+                        <h3><a href="https://t.ly/ukmMP" target="_blank">E-Blog</a></h3>
                         <p>Thanks to your article title, IA suggest you a description whitch you can custom, then post it.</p>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                     </div>
                     <div>
                         <div>
-                            <h3><a href="#work">Cuisine-connect</a></h3>
+                            <h3><a href="https://t.ly/2y_Jb" target="_blank">Cuisine-connect</a></h3>
                             <p>Recherche grâce à l'IA de recette dans ma base de données · Chaque recette propose une description, des ingrédients, de recette similaire ou pas et des accompagnements (générer directement par l'IA)
                                 · Un chatbot qui ne répond qu'à des question sur des recettes · Un utilisateur connecté pourra ajouter ses allergies et noté</p>
                             <p>NextJs  - Prisma/Postgres - Zod - Zustand - OpenIA.</p>
@@ -230,7 +230,7 @@
             <a href="#" class="footer__icon"><i class='bx bxl-instagram-alt' ></i></a>
             <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
         </div>
-        <p>&#169; 2021 Copyright - All right reserved.</p>
+        <p>&#169; 2024 Copyright - All right reserved.</p>
     </footer>
     <!--==== SCROLL REVEAL ====-->
     <script src="https://unpkg.com/scrollreveal"></script>
