--- a/porfolio.html
+++ b/porfolio.html
@@ -74,7 +74,6 @@
                     <p class="skills__text"></p>
                     <div class="skills__data">
                         <div class="skills__names">
-                            <i class='bx bxl-html5 skills__icon'></i>
                             <span class="skills__names">ReactJs</span>
                         </div>
                         <div>
@@ -84,7 +83,6 @@
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
-                            <i class='bx bxl-css3 skills__icon'></i>
                             <span class="skills__names">NextJs</span>
                         </div>
                         <div>
@@ -94,7 +92,6 @@
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
-                            <i class='bx bxl-bootstrap skills__icon'></i>
                             <span class="skills__names">Python</span>
                         </div>
                         <div>
@@ -104,7 +101,6 @@
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
-                            <img src="assets/img/twig.png" alt="" class="skills__icon">
                             <span class="skills__names">Java</span>
                         </div>
                         <div>
@@ -114,7 +110,6 @@
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
-                            <i class='bx bxl-javascript skills__icon' ></i>
                             <span class="skills__names">Php/Symfony</span>
                         </div>
                         <div>
@@ -124,7 +119,6 @@
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
-                            <i class="fab fa-php skills__icon"></i>
                             <span class="skills__names">Postgres</span>
                         </div>
                         <div>
@@ -134,7 +128,6 @@
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
-                            <i class="fab fa-symfony skills__icon"></i>
                             <span class="skills__names">Mysql</span>
                         </div>
                         <div>
@@ -149,7 +142,7 @@
                         <img src="assets/img/e-blog_home.png" alt="" class="skills__img">
                     </div>
                     <div class="skills_img_title">
-                        <h3><a href="#skills">E-Blog</a></h3>
+                        <h3><a href="https://t.ly/ukmMP" target="_blank">E-Blog</a></h3>
                         <p>Blog to create, update your article</p>
                         <p>NextJs - Prisma/Postgres - NextAuth - OpenIA.</p>
                     </div>
